--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -1,32 +1,25 @@
-/* Style de base pour le header */
-header {
-    background-color: #333; /* Couleur de fond */
-    color: #fff; /* Couleur du texte */
-    padding: 20px; /* Espacement intérieur */
-    display: flex; /* Utilisation de flexbox pour aligner les éléments */
-    justify-content: space-between; /* Aligner les éléments sur l'axe horizontal avec un espace entre eux */
-    align-items: center; /* Aligner les éléments sur l'axe vertical */
+.nav {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 50px;
+    background-color: #4F5AA8;
 }
 
-/* Style du logo */
-.logo img {
-    width: 50px; /* Largeur de l'image */
-    height: auto; /* Hauteur automatique pour maintenir les proportions */
+.nav li {
+    float: right;
+    margin-right: 4%;
+    font-weight: bold;
+    line-height: 50px;
 }
 
-/* Style de la navigation */
-nav {
-    display: flex; /* Utilisation de flexbox pour aligner les liens */
+.nav li:last-child {
+    float: left;
+    margin-left: 4%;
 }
 
-/* Style des liens dans la navigation */
-nav a {
-    color: #fff; /* Couleur du texte des liens */
-    text-decoration: none; /* Supprimer la décoration des liens */
-    margin-left: 20px; /* Espacement entre les liens */
-}
-
-/* Style des liens au survol */
-nav a:hover {
-    text-decoration: underline; /* Souligner les liens au survol */
+a {
+    color: white;
+    text-decoration: none;
 }
