--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -2,23 +2,29 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Accueil</title>
-
 </head>
 
 <header>
     <ul class="nav">
-    <li><a href="#">About</a></li>
-    <li><a href="#">Home</a></li>
-    <li><a href="#">ENI - ENCHERES</a></li>
-</ul>
+        <li><a href="/registration">S'inscrire</a></li>
+        <li><a href="/login">Connexion</a></li>
+        <li th:text="'Bienvenue : ' + ${username}">Nom de l'utilisateur</li>
+        <li><a href="/">ENI - ENCHERES</a></li>
+    </ul>
 </header>
-<body>
 
-<h1>Bienvenue sur la page d'accueil!</h1>
+<body>
+<section class="title">
+    <h2>Liste des enchères</h2>
+</section>
+
 </body>
 </html>
 <style>
-
+    .title {
+        margin-top: 100px;
+        text-align: center;
+    }
     body {
         padding: 0px !important;
         margin: 0px !important;
@@ -29,7 +35,7 @@
         padding: 0;
         width: 100%;
         height: 50px;
-        background-color: #4F5AA8;
+        background-color: #0e21ab;
     }
 
     .nav li {
@@ -45,6 +51,12 @@
     }
 
     a {
+        font-family: sans-serif;
+        color: white;
+        text-decoration: none;
+    }
+    li {
+        font-family: sans-serif;
         color: white;
         text-decoration: none;
     }
