--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -1,25 +1,3 @@
-.nav {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 50px;
-    background-color: #4F5AA8;
-}
-
-.nav li {
-    float: right;
-    margin-right: 4%;
-    font-weight: bold;
-    line-height: 50px;
-}
-
-.nav li:last-child {
-    float: left;
-    margin-left: 4%;
-}
-
-a {
-    color: white;
-    text-decoration: none;
+body{
+    background-color: red;
 }
