--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -8,7 +8,7 @@
     <ul class="nav">
         <li><a href="/registration">S'inscrire</a></li>
         <li><a href="/login">Connexion</a></li>
-        <li th:text="'Bienvenue : ' + ${username}">Nom de l'utilisateur</li>
+        <li href="/profil" th:text="'Bienvenue : ' + ${username}">Nom de l'utilisateur</li>
         <li><a href="/">ENI - ENCHERES</a></li>
     </ul>
 </header>
@@ -21,6 +21,10 @@
 </body>
 </html>
 <style>
+
+    h2{
+        font-size: 32px;
+    }
     .title {
         margin-top: 100px;
         text-align: center;
@@ -30,6 +34,8 @@
         margin: 0px !important;
     }
     .nav {
+        padding-top: 10px !important;
+        padding-bottom: 10px !important;
         list-style: none;
         margin: 0;
         padding: 0;
@@ -40,7 +46,7 @@
 
     .nav li {
         float: right;
-        margin-right: 4%;
+        margin-right: 2.5%;
         font-weight: bold;
         line-height: 50px;
     }
