--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -6,76 +6,190 @@
     <title>Registration Page</title>
     <link rel="stylesheet" th:href="@{../css/styles.css}">
 </head>
+<header>
+    <ul class="nav">
+        <li><a href="/registration">S'inscrire</a></li>
+        <li><a href="/login">Connexion</a></li>
+        <li href="/profil" th:text="'Bienvenue : ' + ${username}">Nom de l'utilisateur</li>
+        <li><a href="/">ENI - ENCHERES</a></li>
+    </ul>
+</header>
 <body>
 
 <div class="container">
-    <h2>Registration</h2>
+    <div class="formulaire">
+    <h2>Inscription</h2>
 
     <div th:if="${message != null}" class="message">
         [[${message}]]
     </div>
 
-    <form
-            th:action="@{/registration}"
-            method="post"
-            role="form"
-            th:object="${user}"
-    >
-        <div class="input-group">
-            <label for="pseudo">Pseudo:</label>
-            <input th:field="*{pseudo}" type="text" id="pseudo" name="pseudo" placeholder="Enter your Pseudo" required>
-        </div>
-        <div class="input-group">
-            <label for="nom">Nom:</label>
-            <input th:field="*{nom}" type="text" id="nom" name="nom" placeholder="Enter your Nom"  required>
-        </div>
-        <div class="input-group">
-            <label for="prenom">Prénom:</label>
-            <input th:field="*{prenom}" type="text" id="prenom" name="prenom" placeholder="Enter your Prénom" required>
-        </div>
+        <form
+                th:action="@{/registration}"
+                method="post"
+                role="form"
+                th:object="${user}"
+        >
+            <div class="input-group">
+                <label for="pseudo">Pseudo:</label>
+                <input th:field="*{pseudo}" type="text" id="pseudo" name="pseudo" placeholder="Enter your Pseudo" required>
+            </div>
+            <div class="input-group">
+                <label for="nom">Nom:</label>
+                <input th:field="*{nom}" type="text" id="nom" name="nom" placeholder="Enter your Nom"  required>
+            </div>
+            <div class="input-group">
+                <label for="prenom">Prénom:</label>
+                <input th:field="*{prenom}" type="text" id="prenom" name="prenom" placeholder="Enter your Prénom" required>
+            </div>
 
-        <div class="input-group">
-            <label for="email">Email:</label>
-            <input th:field="*{email}" type="email" id="email" name="email" placeholder="Enter your Email" required>
-        </div>
+            <div class="input-group">
+                <label for="email">Email:</label>
+                <input th:field="*{email}" type="email" id="email" name="email" placeholder="Enter your Email" required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$">
+            </div>
 
-        <div class="input-group">
-            <label for="telephone">Téléphone:</label>
-            <input th:field="*{telephone}" type="text" id="telephone" name="telephone" placeholder="Enter your Téléphone" required>
-        </div>
 
-        <div class="input-group">
-            <label for="rue">Rue:</label>
-            <input th:field="*{rue}" type="text" id="rue" name="rue" placeholder="Enter your Rue" required>
-        </div>
+            <div class="input-group">
+                <label for="telephone">Téléphone:</label>
+                <input th:field="*{telephone}" type="text" id="telephone" name="telephone" placeholder="Enter your Téléphone" required pattern="[0-9]{10}">
+            </div>
 
-        <div class="input-group">
-            <label for="codePostal">Code Postal:</label>
-            <input th:field="*{codePostal}" type="text" id="codePostal" name="codePostal" placeholder="Enter your Code Postal" required>
-        </div>
 
-        <div class="input-group">
-            <label for="ville">Ville:</label>
-            <input th:field="*{ville}" type="text" id="ville" name="ville" placeholder="Enter your Ville" required>
-        </div>
+            <div class="input-group">
+                <label for="rue">Rue:</label>
+                <input th:field="*{rue}" type="text" id="rue" name="rue" placeholder="Enter your Rue" required>
+            </div>
 
-        <div class="input-group">
-            <label for="motDePasse">Mot de Passe:</label>
-            <input th:field="*{motDePasse}" type="password" id="motDePasse" name="motDePasse" placeholder="Enter your Mot de Passe" required>
-        </div>
+            <div class="input-group">
+                <label for="codePostal">Code Postal:</label>
+                <input th:field="*{codePostal}" type="text" id="codePostal" name="codePostal" placeholder="Enter your Code Postal" required pattern="[0-9]{5}">
+            </div>
 
-        <div class="input-gr">
-            <label for="credit">Crédit:</label>
-            <input th:field="*{credit}" type="text" id="credit" name="credit" placeholder="Enter your Crédit" required>
-        </div>
 
-        <div class="input-gr">
-            <label for="administrateur">Administrateur:</label>
-            <input th:field="*{administrateur}" type="checkbox" id="administrateur" name="administrateur">
-        </div>
+            <div class="input-group">
+                <label for="ville">Ville:</label>
+                <input th:field="*{ville}" type="text" id="ville" name="ville" placeholder="Enter your Ville" required>
+            </div>
 
-        <button type="submit" class="btn">Register</button>
-    </form>
+            <div class="input-group">
+                <label for="motDePasse">Mot de Passe:</label>
+                <input th:field="*{motDePasse}" type="password" id="motDePasse" name="motDePasse" placeholder="Enter your Mot de Passe" required>
+            </div>
+
+            <div class="input-group">
+                <label for="credit">Crédit:</label>
+                <input th:field="*{credit}" type="number" id="credit" name="credit" placeholder="Enter your Crédit" required>
+            </div>
+
+            <div class="input-gr">
+                <label for="administrateur">Administrateur:</label>
+                <input th:field="*{administrateur}" type="checkbox" id="administrateur" name="administrateur">
+            </div>
+
+            <button type="submit" class="btn">Register</button>
+        </form>
+    </div>
 </div>
 </body>
+<style>
+    .container {
+        width: 40%;
+        margin: 50px auto;
+        padding: 20px;
+        border-radius: 25px;
+        background-color: #ffffff;
+        box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75); /* Ajoute une ombre */
+    }
+
+    .container h2 {
+        text-align: center;
+    }
+
+    .input-group {
+        margin-bottom: 10px;
+    }
+
+    .input-group label {
+        font-size: 15px;
+        font-family: sans-serif;
+        display: block;
+        margin-bottom: 5px;
+    }
+
+    .input-group input {
+        width: 93%;
+        padding: 10px;
+        border-radius: 5px;
+        border: 1px solid #ccc;
+    }
+
+    .btn {
+        width: 100%;
+        padding: 10px;
+        border: none;
+        border-radius: 5px;
+        background-color: #0e21ab;
+        color: #fff;
+        cursor: pointer;
+    }
+
+    .btn:hover {
+        background-color: #0056b3;
+    }
+    .message {
+        background-color: #333;
+        color: #fff;
+        padding: 10px;
+        margin-bottom: 20px;
+        border-radius: 5px;
+        text-align: center;
+    }
+    h2{
+        font-size: 32px;
+    }
+    .title {
+        margin-top: 100px;
+        text-align: center;
+    }
+    body {
+        padding: 0px !important;
+        margin: 0px !important;
+    }
+    .nav {
+        padding-top: 10px !important;
+        padding-bottom: 10px !important;
+        list-style: none;
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        height: 50px;
+        background-color: #0e21ab;
+    }
+
+    .nav li {
+        float: right;
+        margin-right: 2.5%;
+        font-weight: bold;
+        line-height: 50px;
+    }
+
+    .nav li:last-child {
+        float: left;
+        margin-left: 4%;
+    }
+
+    a {
+        font-family: sans-serif;
+        color: white;
+        text-decoration: none;
+    }
+    li {
+        font-family: sans-serif;
+        color: white;
+        text-decoration: none;
+    }
+</style>
+
+
+
 </html>
