--- a/src/main/resources/templates/customLogin.html
+++ b/src/main/resources/templates/customLogin.html
@@ -19,7 +19,7 @@
         <div class="form-group">
             <button type="submit" class="btn">Log in</button>
         </div>
-        <p><a th:href="@{/reset-password}">Forgot your password?</a></p>
+        <p><a th:href="@{/auth/forgot-password}">Forgot your password?</a></p>
         <p th:if="${param.error}">Invalid username or password.</p>
         <p th:if="${param.logout}">You have been logged out.</p>
     </form>
