artcile create and liste

--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -46,7 +46,7 @@
 
 
     </tr>
-    <tr  th:each="users : ${user}">
+    <tr  th:each="users : ${users}">
         <td  th:text="${users.pseudo}"></td>
         <td  th:text="${users.nom}"></td>
         <td  th:text="${users.prenom}"></td>
