--- a/src/main/resources/templates/customLogin.html
+++ b/src/main/resources/templates/customLogin.html
@@ -1,28 +1,38 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Login</title>
-    <link rel="stylesheet" th:href="@{/css/style.css}">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Liste des articles</title>
+    <link rel="stylesheet" href="/css/login.css">
 </head>
+    <ul class="nav">
+        <li><a href="/registration">S'inscrire</a></li>
+        <li><a href="/">ENI - ENCHERES</a></li>
+    </ul>
+</header>
 <body>
 <div class="login-container">
-    <h2>Login</h2>
-    <form th:action="@{/perform_login}" method="post">
-        <div class="form-group">
-            <label for="username">Username:</label>
-            <input type="text" id="username" name="username" required autofocus />
+    <form th:action="@{/perform_login}" method="post" class="login-form">
+        <p th:if="${param.error}" class="error-message">Identifiant ou mot de passe incorrect.</p>
+        <p th:if="${param.logout}" class="logout-message">Vous avez été déconnécté.</p>
+        <h1>Connexion</h1>
+        <div class="txtb">
+            <input type="text" id="username" name="username" placeholder="Username" required autofocus />
         </div>
-        <div class="form-group">
-            <label for="password">Password:</label>
-            <input type="password" id="password" name="password" required />
+        <div class="txtb">
+            <input type="password" id="password" name="password" placeholder="Password" required />
         </div>
-        <div class="form-group">
-            <button type="submit" class="btn">Log in</button>
+        <input type="submit" value="Login" class="logbtn">
+        <p><a class="mdp" th:href="@{/auth/forgot-password}">Mot de passe oublié ?</a></p>
+
+        <div class="bottom-text">
+            Pas de compte ? <a class="connexion" th:href="@{/registration}">S'inscrire</a>
         </div>
-        <p><a th:href="@{/auth/forgot-password}">Forgot your password?</a></p>
-        <p th:if="${param.error}">Invalid username or password.</p>
-        <p th:if="${param.logout}">You have been logged out.</p>
+
+
     </form>
 </div>
 </body>
+
 </html>
