--- a/src/main/resources/templates/profil.html
+++ b/src/main/resources/templates/profil.html
@@ -23,6 +23,7 @@
         <td th:text="${user.prenom}"></td>
         <td th:text="${user.email}"></td>
         <td th:text="${user.telephone}"></td>
+        <td th:text="${user.rue}"></td>
         <td th:text="${user.codePostal}"></td>
         <td th:text="${user.ville}"></td>
     </tr>
