--- a/src/main/resources/templates/articles.html
+++ b/src/main/resources/templates/articles.html
@@ -4,7 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Liste des articles</title>
+    <link rel="stylesheet" href="/css/nav.css">
 </head>
+<header>
+    <ul class="nav">
+        <li><a href="/new/article">Nouveau Article</a></li>
+        <li><a href="/articles">Rechercher un article</a></li>
+        <li><a href="/registration">S'inscrire</a></li>
+        <li><a href="/login">Connexion</a></li>
+        <li href="/profil" th:text="'Bienvenue : ' + ${username}">Nom de l'utilisateur</li>
+        <li><a href="/">ENI - ENCHERES</a></li>
+    </ul>
+</header>
 <body>
 <h1>Liste des articles</h1>
 <table>
