--- a/src/main/resources/templates/articleNew.html
+++ b/src/main/resources/templates/articleNew.html
@@ -11,7 +11,7 @@
         <li><a href="/registration">S'inscrire</a></li>
         <li><a href="/login">Connexion</a></li>
         <li th:text="'Bienvenue : ' + ${username}"></li>
-        <li><a href="/">ENI - ENCHERES</a></li>
+        <li><a href="/static">ENI - ENCHERES</a></li>
     </ul>
 </header>
 <body>
