--- a/src/main/resources/templates/customLogin.html
+++ b/src/main/resources/templates/customLogin.html
@@ -6,6 +6,7 @@
     <title>Liste des articles</title>
     <link rel="stylesheet" href="/css/login.css">
 </head>
+</header>
     <ul class="nav">
         <li><a href="/registration">S'inscrire</a></li>
         <li><a href="/">ENI - ENCHERES</a></li>
