--- a/src/main/resources/templates/request-reset-password.html
+++ b/src/main/resources/templates/request-reset-password.html
@@ -1,22 +1,28 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Request Password Reset</title>
-    <link rel="stylesheet" th:href="@{/css/style.css}">
+    <title>Mot de passe oublié</title>
+    <link rel="stylesheet" href="/css/reset.css"> <!-- Utilisez le même fichier CSS que le premier formulaire -->
 </head>
+
+<header>
+    <ul class="nav">
+        <li><a href="/registration">S'inscrire</a></li>
+        <li><a href="/">ENI - ENCHERES</a></li>
+    </ul>
+</header>
+
 <body>
-<div class="reset-password-container">
-    <h2>Reset Password</h2>
-    <form th:action="@{/auth/forgot}" method="post">
-        <div class="form-group">
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required />
+<div class="login-container">
+    <form th:action="@{/auth/forgot}" method="post" class="login-form">
+        <h2>Réinitialiser le mot de passe</h2>
+        <div class="txtb">
+            <input type="email" id="email" name="email" placeholder="Email" required />
         </div>
-        <div class="form-group">
-            <button type="submit" class="btn">Send Reset Link</button>
-        </div>
+        <input type="submit" value="Envoyer le lien de réinitialisation" class="logbtn">
+
         <!-- Affichage conditionnel du message -->
-        <p th:if="${message}" th:text="${message}"></p>
+        <p th:if="${message}" class="info-message" th:text="${message}"></p>
     </form>
 </div>
 </body>
