--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -2,14 +2,18 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Accueil</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
 </head>
 
 <header>
     <ul class="nav">
+        <li><a href="/login?logout"><i class="fa fa-sign-out"></i></a></li>
         <li><a href="/registration">S'inscrire</a></li>
         <li><a href="/login">Connexion</a></li>
-        <li href="/profil" th:text="'Bienvenue : ' + ${username}">Nom de l'utilisateur</li>
+        <li><a href="/profil"><i class="fa fa-user"></i> <span th:text="${username}"></span></a></li>
         <li><a href="/">ENI - ENCHERES</a></li>
+
     </ul>
 </header>
 
