--- a/src/main/resources/templates/categorieNew.html
+++ b/src/main/resources/templates/categorieNew.html
@@ -6,14 +6,7 @@
     <title>Page d'inscription</title>
     <link rel="stylesheet" th:href="@{../css/styles.css}">
 </head>
-<header>
-    <ul class="nav">
-        <li><a href="/registration">S'inscrire</a></li>
-        <li><a href="/login">Connexion</a></li>
-        <li href="/profil" th:text="'Bienvenue : ' + ${username}">Nom de l'utilisateur</li>
-        <li><a href="/">ENI - ENCHERES</a></li>
-    </ul>
-</header>
+<header th:replace="~{fragment/nav}"></header>
 <body>
 <div class="container">
     <div class="formulaire">
