--- a/src/main/resources/templates/request-reset-password.html
+++ b/src/main/resources/templates/request-reset-password.html
@@ -5,12 +5,7 @@
     <link rel="stylesheet" href="/css/reset.css"> <!-- Utilisez le même fichier CSS que le premier formulaire -->
 </head>
 
-<header>
-    <ul class="nav">
-        <li><a href="/registration">S'inscrire</a></li>
-        <li><a href="/">ENI - ENCHERES</a></li>
-    </ul>
-</header>
+<header th:replace="~{fragment/nav}"></header>
 
 <body>
 <div class="login-container">
