--- a/src/main/resources/templates/articleNew.html
+++ b/src/main/resources/templates/articleNew.html
@@ -6,14 +6,7 @@
     <title>Page d'inscription</title>
     <link rel="stylesheet" href="/css/nav.css">
 </head>
-<header>
-    <ul class="nav">
-        <li><a href="/registration">S'inscrire</a></li>
-        <li><a href="/login">Connexion</a></li>
-        <li th:text="'Bienvenue : ' + ${username}"></li>
-        <li><a href="/static">ENI - ENCHERES</a></li>
-    </ul>
-</header>
+<header th:replace="~{fragment/nav}"></header>
 <body>
 <div class="container">
     <div class="formulaire">
