--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" href="/css/nav.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <meta charset="ISO-8859-1">
     <title>Users</title>
     <style>
