--- a/src/main/resources/templates/fragment/nav.html
+++ b/src/main/resources/templates/fragment/nav.html
@@ -5,7 +5,7 @@
         <li><a href="/articles">Articles</a></li>
         <li><a href="/registration">S'inscrire</a></li>
         <li><a href="/login">Connexion</a></li>
-        <li><a href="/">ENI - ENCHERES</a></li>
+        <li><a  class="active" href="/">ENI - ENCHERES</a></li>
     </ul>
 </header>
 
