--- a/src/main/resources/templates/profil.html
+++ b/src/main/resources/templates/profil.html
@@ -5,7 +5,7 @@
         <title>Profil de l'utilisateur</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
         <link rel="stylesheet" href="/css/profil.css">
-
+        <link rel="stylesheet" href="/css/nav.css">
     </head>
     <header th:replace="~{fragment/nav}"></header>
     <body>
