--- a/src/main/resources/templates/fragment/nav.html
+++ b/src/main/resources/templates/fragment/nav.html
@@ -1,11 +1,28 @@
 <header>
-    <ul class="nav">
-        <li><a href="/login?logout"><i class="fas fa-sign-out-alt"></i></a></li>
-        <li><a href="/profil"><i class="fas fa-user"></i></a></li>
-        <li><a href="/articles">Articles</a></li>
-        <li><a href="/registration">S'inscrire</a></li>
-        <li><a href="/login">Connexion</a></li>
-        <li><a href="/">ENI - ENCHERES</a></li>
-    </ul>
+    <div class="nav">
+        <input type="checkbox" id="nav-check">
+        <div class="nav-header">
+            <div class="nav-title">
+                ENI - ENCHÈRES
+            </div>
+        </div>
+        <div class="nav-btn">
+            <label for="nav-check">
+                <span></span>
+                <span></span>
+                <span></span>
+            </label>
+        </div>
+
+        <div class="nav-links">
+
+            <a href="/articles">Articles</a>
+            <a href="/registration">S'inscrire</a>
+            <a href="/login">Connexion</a></li>
+            <a href="/profil"><i class="fas fa-user"></i></a>
+
+            <a href="/login?logout"><i class="fas fa-sign-out-alt"></i></a>
+        </div>
+    </div>
 </header>
 
