--- a/src/main/resources/static/css/list.css
+++ b/src/main/resources/static/css/list.css
@@ -50,3 +50,17 @@ h1{
 .encherir {
     background-color: #0e21ab; /* Bleu */
 }
+.new-article-button {
+    padding: 10px 20px;
+    background-color: #0e21ab;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.button-container {
+    text-align: right;
+    margin-bottom: 10px;
+    margin-right: 134px;
+}
