--- a/src/main/resources/templates/articles.html
+++ b/src/main/resources/templates/articles.html
@@ -11,6 +11,9 @@
 <header th:replace="~{fragment/nav}"></header>
 <body>
 <h1>Liste des articles</h1>
+<div class="button-container">
+    <button class="new-article-button" th:href="@{/new/article}">Nouvel Article</button>
+</div>
 <table>
     <thead>
     <tr>
