--- a/src/main/resources/templates/profil.html
+++ b/src/main/resources/templates/profil.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
         <link rel="stylesheet" href="/css/profil.css">
         <link rel="stylesheet" href="/css/nav.css">
-
+        <link rel="stylesheet" href="/css/modifierProfil.css">
 
     </head>
     <header th:replace="~{fragment/nav}"></header>
@@ -65,5 +65,35 @@
         </div>
     </div>
     </div>
-    </body>
-    </html>
+
+    <h2>Modifier profil</h2>
+    <form th:action="@{/modifierProfil}" method="post" role="form" th:object="${user}">
+        <label for="pseudo">Pseudo :</label>
+        <input type="text" id="pseudo" name="pseudo" th:field="*{pseudo}" /><br>
+
+        <label for="nom">Nom :</label>
+        <input type="text" id="nom" name="nom" th:field="*{nom}" /><br>
+
+        <label for="prenom">Prénom :</label>
+        <input type="text" id="prenom" name="prenom" th:field="*{prenom}" /><br>
+
+        <label for="email">Email :</label>
+        <input type="email" id="email" name="email" th:field="*{email}" /><br>
+
+        <label for="telephone">Téléphone :</label>
+        <input type="text" id="telephone" name="telephone" th:field="*{telephone}" /><br>
+
+        <label for="rue">Rue :</label>
+        <input type="text" id="rue" name="rue" th:field="*{rue}" /><br>
+
+        <label for="codePostal">Code postal :</label>
+        <input type="text" id="codePostal" name="codePostal" th:field="*{codePostal}" /><br>
+
+        <label for="ville">Ville :</label>
+        <input type="text" id="ville" name="ville" th:field="*{ville}" /><br>
+
+
+        <button type="submit">Enregistrer</button>
+    </form>
+</body>
+</html>
