--- a/src/main/resources/templates/articles.html
+++ b/src/main/resources/templates/articles.html
@@ -12,8 +12,11 @@
 <body>
 <h1>Liste des articles</h1>
 <div class="button-container">
-    <button class="new-article-button" th:href="@{/new/article}">Nouvel Article</button>
+    <a th:href="@{/new/article}">
+        <button class="new-article-button">Nouvel Article</button>
+    </a>
 </div>
+
 <table>
     <thead>
     <tr>
