--- a/src/main/resources/templates/profil.html
+++ b/src/main/resources/templates/profil.html
@@ -65,5 +65,11 @@
         </div>
     </div>
     </div>
+    <div class="profil">
+        <button class="profile__edit-button">
+            <a th:href="@{/edit-profil}">Modifier Profil</a>
+        </button>
+    </div>
+
     </body>
     </html>
