--- a/src/main/resources/templates/edit-profil.html
+++ b/src/main/resources/templates/edit-profil.html
@@ -9,42 +9,16 @@
 <header th:replace="~{fragment/nav}"></header>
 <div class="container">
     <form th:action="@{/edit-profil}" method="post" th:object="${user}">
-        <div>
-            <label for="pseudo">Pseudo</label>
-            <input type="text" id="pseudo" th:field="*{pseudo}" required>
-        </div>
-        <div>
-            <label for="email">Email</label>
-            <input type="email" id="email" th:field="*{email}" required>
-        </div>
-        <div>
-            <label for="nom">Nom</label>
-            <input type="text" id="nom" th:field="*{nom}">
-        </div>
-        <div>
-            <label for="prenom">Prénom</label>
-            <input type="text" id="prenom" th:field="*{prenom}">
-        </div>
-        <div>
-            <label for="telephone">Téléphone</label>
-            <input type="tel" id="telephone" th:field="*{telephone}">
-        </div>
-        <div>
-            <label for="rue">Rue</label>
-            <input type="text" id="rue" th:field="*{rue}">
-        </div>
-        <div>
-            <label for="codePostal">Code Postal</label>
-            <input type="text" id="codePostal" th:field="*{codePostal}">
-        </div>
-        <div>
-            <label for="ville">Ville</label>
-            <input type="text" id="ville" th:field="*{ville}">
-        </div>
-        <div>
-            <label for="motDePasse">Mot de passe (laisser vide pour ne pas changer)</label>
-            <input type="password" id="motDePasse" th:field="*{motDePasse}">
-        </div>
+        <input type="hidden" th:field="*{noUtilisateur}" />
+        <input type="text" th:field="*{pseudo}" required />
+        <input type="email" th:field="*{email}" required />
+        <input type="text" th:field="*{nom}" />
+        <input type="text" th:field="*{prenom}" />
+        <input type="tel" th:field="*{telephone}" />
+        <input type="text" th:field="*{rue}" />
+        <input type="text" th:field="*{codePostal}" />
+        <input type="text" th:field="*{ville}" />
+        <input type="password" th:field="*{motDePasse}" placeholder="Laisser vide pour ne pas changer" />
         <button type="submit">Sauvegarder les modifications</button>
     </form>
 </div>
