--- a/src/main/resources/templates/profil.html
+++ b/src/main/resources/templates/profil.html
@@ -11,7 +11,7 @@
     </head>
     <header th:replace="~{fragment/nav}"></header>
     <body>
-    <div class="container2"> <!-- Conteneur pour les blocs .layout -->
+    <div class="container2">
 
         <div class="layout">
         <div class="profile">
