--- a/src/main/resources/static/css/profil.css
+++ b/src/main/resources/static/css/profil.css
@@ -242,3 +242,28 @@ html, body {
     }
 }
 
+#edit-1 .form-modif .txtb input {
+    color: #000;
+    font-style: italic;
+}
+
+#edit-1 .form-modif .txtb{
+    margin: 0px;
+}
+
+#edit-1 .form-modif .txtb p{
+    text-align: left;
+    font-weight: bold;
+    margin-bottom: 0px;
+    margin-top: 25px;
+}
+
+#edit-1 .form-modif .cote{
+    display: flex;
+    justify-content: space-between;
+}
+
+#edit-1 .form-modif .logbtn {
+    margin-top: 25px;
+}
+
