--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -97,10 +97,9 @@ li {
     justify-content: center;
     margin-top: 50px;
 }
-
 .login-form {
-    padding: 0 40px 60px 40px;
-    width: 25%;
+    padding: 10px 40px 70px 40px;
+    width: 22%;
     background: #f1f1f1;
 }
 
